# xtail

./: .gitignore
client/php/: proto.php  xtail.php
protocol/: server.xml
server/: CMakeLists.txt  base64.c  base64.h  common.h  config.ini  server_action.c  server_action.h  sha1.c  terminal_group.c  terminal_group.h  utils.c  utils.h  web_socket.c  web_socket.h  xtail  xtail.c  xtail.h  xtail_server.c  xtail_server.h  xtail_terminal.c  xtail_terminal.h
server/protocol/: proto.c  proto.h  proto_def.h
server/yile/yile_buf/include/: yile_buf.h
terminal/: index.html
terminal/static/bootstrap/css/: bootstrap-theme.css  bootstrap-theme.css.map  bootstrap.css.map
terminal/static/css/: xtail.css
terminal/static/js/: cache.js  client.js  config.js  xtail.js
terminal/static/newe/: ajax.js  main.js  newe.js  smarty.js  url.js  window.js
terminal/static/newe/jquery/: core.js  widget.js
terminal/static/newe/jquery/datepicker/: datepicker.js
terminal/static/newe/jquery/jquery/1.10.1/: jquery.js  package.json
terminal/static/newe/jquery/qrcode/: qrcode.js
terminal/static/newe/jquery/select2/: select2.js
terminal/static/newe/jquery/tabs/: tabs.js
terminal/static/newe/layer/: layer.js
terminal/static/newe/layer/extend/: layer.ext.js
terminal/static/newe/layer/mobile/: layer.m.js
terminal/static/newe/layer/mobile/need/: layer.css
terminal/static/newe/layer/skin/: layer.css  layer.ext.css
terminal/static/newe/layer/skin/moon/: style.css
terminal/static/newe/seajs/: sea.js  seajs-css.js
terminal/static/newe/static/: base.css
test/: test.php
